--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -25,6 +25,9 @@ body {
 	margin-top: 5px;
 }
 #site-name {
+    width: 99%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 100px;
     position:absolute;
     top:0;
@@ -35,4 +38,31 @@ body {
 }
 .logo-btn {
 	padding-top: 10px;
+}
+.alert {
+    background-color: #222222;
+    color: #999999;
+    margin-top: -10px;
+    border: 0;
+}
+.inverse {
+    margin-top: -40px;
+    background-color: #222222;
+    color: #999999;
+    border: 0;
+}
+.close {
+    color: #ffffff;
+}
+.navbar-inverse {
+    background-color: #222222;
+    color: #999999;
+    border: 0;
+}
+.message-center {
+    text-align: center;
+    color: #000000;
+}
+.right {
+    text-align: right;
 }
