--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -63,6 +63,14 @@ body {
     text-align: center;
     color: #000000;
 }
+.pull-left {
+    margin-left: 10%;
+}
+.add-button {
+    margin-left: 5%;
+    padding-left: 5%;
+}
+
 /**
 * Type Styles
 **/
