--- a/apache-tomcat-7.0.54/webapps/ROOT/resources/css/eternity.css
+++ b/apache-tomcat-7.0.54/webapps/ROOT/resources/css/eternity.css
@@ -86,6 +86,11 @@ body {
     background: linear-gradient(to bottom, #45484d 0%,#000000 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
+.div-center {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
 /**
 * Type Styles
 **/
@@ -93,4 +98,54 @@ body {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+/**
+* Badges
+**/
+
+.badge {
+    padding: 1px 9px 2px;
+    font-size: 12.025px;
+    font-weight: bold;
+    white-space: nowrap;
+    color: #ffffff;
+    background-color: #999999;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+}
+.badge:hover {
+    color: #ffffff;
+    text-decoration: none;
+    cursor: pointer;
+}
+.badge-error {
+    background-color: #b94a48;
+}
+.badge-error:hover {
+    background-color: #953b39;
+}
+.badge-warning {
+    background-color: #f89406;
+}
+.badge-warning:hover {
+    background-color: #c67605;
+}
+.badge-success {
+    background-color: #468847;
+}
+.badge-success:hover {
+    background-color: #356635;
+}
+.badge-info {
+    background-color: #3a87ad;
+}
+.badge-info:hover {
+    background-color: #2d6987;
+}
+.badge-inverse {
+    background-color: #333333;
+}
+.badge-inverse:hover {
+    background-color: #1a1a1a;
 }
