--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -1,11 +1,11 @@
 /**
 *
 * Balero CMS: Eternity Generic Template
-*
 * Main CSS Styles
-*
 * http://www.balerocms.com/
 *
+* @author Anibal Gomez
+
 **/
 
 body {
