--- a/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
+++ b/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
@@ -1,11 +1,11 @@
 /**
 *
 * Balero CMS: Eternity Generic Template
-*
 * Main CSS Styles
-*
 * http://www.balerocms.com/
 *
+* @author Anibal Gomez
+
 **/
 
 body {
@@ -98,6 +98,21 @@ body {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+#site-name a {
+    color: #FFFFFF;
+}
+#site-name a:link {
+    color: #FFFFFF;
+}
+#site-name a:hover {
+    color: #FFFFFF;
+}
+#site-name a:visited {
+    color: #FFFFFF;
+}
+#site-name a:active {
+    color: #FFFFFF;
 }
 /**
 * Badges
