--- a/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
+++ b/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
@@ -120,6 +120,9 @@ body {
 .fix {
     margin: 10px;
 }
+.comments {
+    padding: 10px;
+}
 /**
 * Badges
 **/
@@ -169,4 +172,35 @@ body {
 }
 .badge-inverse:hover {
     background-color: #1a1a1a;
+}
+/**
+ * Bubble
+ * http://ilikepixels.co.uk/drop/bubbler/
+ **/
+.bubble
+{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    background: #F0F2F3;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.bubble:after
+{
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 15px 15px 15px 0;
+    border-color: transparent #F0F2F3;
+    display: block;
+    width: 0;
+    z-index: 1;
+    left: -15px;
+    top: 45px;
 }
