--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -63,6 +63,9 @@ body {
     text-align: center;
     color: #000000;
 }
+.pull-left-button {
+    margin-left: 1px;
+}
 .pull-left {
     margin-left: 10%;
 }
@@ -73,11 +76,19 @@ body {
     margin-left: 5%;
     padding-left: 5%;
 }
+#editable-footer {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
 #footer {
     width: 100%;
     height: auto;
-    padding: 5% 8% 2%;
-    margin-top: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    margin-top: 10%;
     text-align: center;
     color: #cccccc;
     background: #45484d; /* Old browsers */
@@ -88,6 +99,13 @@ body {
     background: -ms-linear-gradient(top, #45484d 0%,#000000 100%); /* IE10+ */
     background: linear-gradient(to bottom, #45484d 0%,#000000 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+.container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4%;
+    margin-bottom: 5%;
 }
 .div-center {
     width: 80%;
@@ -119,6 +137,11 @@ body {
 }
 .fix {
     margin: 10px;
+}
+.btn-custom {
+    border: 0;
+    color: black;
+    background-color: white;
 }
 .comments {
     padding: 10px;
