--- a/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
+++ b/apache-tomcat-7.0.54/webapps/ROOT/WEB-INF/classes/css/eternity.css
@@ -8,8 +8,8 @@
 **/
 
 .alert {
-    background-color: #222222;
-    color: #999999;
+    /*background-color: #222222;*/
+    /*color: #999999;*/
     margin-top: -10px;
     border: 0;
 }
