--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -23,7 +23,7 @@
     background-color: white;
 }
 .bxslider {
-   border: 0;
+    border: 0;
 }
 body {
     margin: 0;
@@ -146,19 +146,17 @@ body {
     height: auto;
     padding-left: 2%;
     padding-right: 2%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-top: 4%;
+    padding-bottom: 1%;
     margin-top: 10%;
     text-align: center;
-    color: #cccccc;
-    background: #45484d; /* Old browsers */
-    background: -moz-linear-gradient(top, #45484d 0%, #000000 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #45484d 0%,#000000 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #45484d 0%,#000000 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #45484d 0%,#000000 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    color: #000000;
+    background-color: #f9f9f9;
+    border-style:solid;
+    border-top:solid rgba(102, 102, 102, 0.07);
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
 }
 .inverse {
     margin-top: -40px;
