--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -33,8 +33,9 @@ body {
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 4%;
+    padding-top: 3%;
     padding-bottom: 5%;
+    margin-bottom: 10px;
 }
 /**
 * Badges
