--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -142,7 +142,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-#editable-footer {
+#editorfooter {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
