--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -127,6 +127,13 @@ body {
 .close {
     color: #ffffff;
 }
+.container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
 .container-box {
     width: 100%;
     margin-left: auto;
