--- a/src/main/webapp/resources/css/eternity.css
+++ b/src/main/webapp/resources/css/eternity.css
@@ -46,6 +46,14 @@ body {
     margin-bottom: 10px;
     display: inline-block;
 }
+.box-toolbox {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 /**
 * Badges
 **/
